# quantitative_codex

./: README.md  pyproject.toml
quantitative_codex/: __init__.py  main.py
quantitative_codex/backtest/: __init__.py  vectorized.py
quantitative_codex/data/: __init__.py  cleaning.py  providers.py  schema.py
quantitative_codex/evaluation/: __init__.py  walk_forward.py
quantitative_codex/execution/: __init__.py  models.py  oms.py
quantitative_codex/execution/brokers/: __init__.py  base.py  paper.py
quantitative_codex/factors/: __init__.py  library.py
quantitative_codex/live/: __init__.py  small_capital.py
quantitative_codex/monitoring/: __init__.py  alerts.py
quantitative_codex/parameters/: __init__.py  registry.py
quantitative_codex/portfolio/: __init__.py  optimization.py
quantitative_codex/reconciliation/: __init__.py  engine.py
quantitative_codex/review/: __init__.py  postmortem.py
quantitative_codex/risk/: __init__.py  controls.py
tests/: test_backtest.py  test_data_layer.py  test_execution_oms.py  test_factors.py  test_live_monitoring_parameters_review.py  test_portfolio_risk.py  test_reconciliation.py  test_single_stock_main.py  test_walk_forward.py
